--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <div class="video-bg">
 
         <video id="video-bg-1" autoplay loop muted width="1930" height="1252" data-keepplaying>
-            <source src="video/bg1.mp4" type="video/mp4">
+            <source src="sounds/bg1.mp4" type="video/mp4">
         </video>
 
         <video id="video-bg-2" loop muted width="1930" height="1252" data-keepplaying>
-            <source src="video/bg2.mp4" type="video/mp4">
+            <source src="sounds/bg2.mp4" type="video/mp4">
         </video>
 
     </div>
